src/pages/settings/helpCenter/components/articles/HelpCenterEditor/HelpCenterEditor.less
@import './font-family';

@import '~froala-editor/css/froala_editor.pkgd.min.css';

:local {
    .froalaEditorWrapper {
        height: ~'calc(100% - 180px)';
        display: flex;
        flex-direction: column;
        min-height: 0;

        // Remove round corners around the editor
        :global {
            #imageByURL-2 {
                display: none; // uncomment when we start supporting image upload by URL
            }

            .fr-toolbar {
                border-color: var(--neutral-grey-4);
            }
            .fr-toolbar.fr-top,
            .fr-second-toolbar {
                border-radius: 0;
            }

            .fr-wrapper > .fr-view {
                padding: 64px;
                min-height: 100%;

                p {
                    font-size: 16px;
                }
            }

            .fr-action-buttons button.fr-command {
                color: var(--main-primary);
            }

            .fr-qi-helper a.fr-btn.fr-floating-btn {
                padding: 0 10px;
            }

            .fr-toolbar {
                background-color: var(--neutral-grey-2);

                fr-tabs .fr-command.fr-btn:not(:hover):not(:focus) {
                    &.fr-active-tab {
                        background-color: var(--neutral-grey-0);
                    }

                    &.fr-active {
                        background-color: var(--neutral-grey-0);
                    }
                }
            }

            .fr-command {
                color: var(--neutral-grey-6) !important;

                &.fr-btn {
                    i {
                        font-size: 18px;
                    }

                    svg path {
                        fill: #222;
                    }

                    &.fr-btn-active-popup {
                        background-color: var(--neutral-grey-3);
                    }

                    + .fr-dropdown-menu
                        .fr-dropdown-wrapper
                        .fr-dropdown-content {
                        background-color: var(--neutral-grey-1);

                        ul.fr-dropdown-list li a.fr-active {
                            background-color: hsl(
                                var(--neutral-grey-4-h),
                                var(--neutral-grey-4-s),
                                calc(var(--neutral-grey-4-l) + 10%)
                            );
                        }
                    }

                    &.fr-dropdown.fr-active {
                        background-color: var(--neutral-grey-3);

                        &:hover {
                            background-color: var(--neutral-grey-3);
                        }
                    }
                }
            }

            .fr-separator {
                background-color: var(--neutral-grey-3);
            }

            .gorgias-file-attachment__wrapper {
                background-color: var(--neutral-grey-2);
                display: flex;
                justify-content: space-between;
                align-items: center;

                height: 36px;
                background: var(--neutral-grey-2);
                border-radius: 4px;
                padding: 8px;

                margin-top: 16px;
                margin-bottom: 16px;

                + .gorgias-file-attachment__wrapper {
                    margin-top: -8px;
                }

                .material-icons {
                    font-size: 20px;

                    color: var(--neutral-grey-6);
                }

                i.gorgias-file-attachment__close-icon {
                    font-size: 16px;

                    cursor: pointer;

                    color: var(--neutral-grey-4);
                }

                a.gorgias-file-attachment__anchor-name {
                    color: var(--neutral-grey-6);
                    font-weight: 600;
                    font-size: 14px;
                    line-height: 20px;
                    height: 20px;

                    text-decoration-line: underline !important;

                    max-width: 500px;
                    overflow: hidden;
                    white-space: nowrap;
                    text-overflow: ellipsis;
                }

                span.gorgias-file-attachment__span-size {
                    font-weight: 400;
                    font-size: 14px;
                    line-height: 20px;
                    color: var(--neutral-grey-4);
                }

                > div {
                    display: flex;
                    align-items: center;
                    justify-content: center;
                    align-items: center;

                    gap: 8px;
                }
            }

            .fr-desktop {
                .fr-command {
                    &:active {
                        background-color: var(--neutral-grey-3);
                    }

                    &:hover:not(.fr-table-cell) {
                        background-color: var(--neutral-grey-3);
                    }
                }
            }

            .fr-popup {
                .fr-command.fr-btn {
                    svg path {
                        fill: #222 !important;
                    }
                }

                .fr-buttons.fr-tabs {
                    background-color: var(--neutral-grey-2);
                }
            }
        }
    }
}

